--- a/codehtml/assests/css/style.css
+++ b/codehtml/assests/css/style.css
@@ -1,9 +1,7 @@
 body   {
     margin: 0;
     padding: 0;
-    width: 100%;
     height: 100%;
-    box-sizing: border-box;
     background-color: #f0f0f0;
     font-family: Arial;
 }
@@ -17,12 +15,17 @@ header  {
     text-align: center;
     margin: 50px 0 50px 0;
 }
+
+.homepage{
+    display: flex;
+    width: 100%;
+}
+
 aside {
     margin-top: 20px;
     border-radius: 5px;
     margin-left: 5%;
     background-color: #FFFFFF;
-    float: left;
     height:790px ;
     width: 20%;
     box-sizing: border-box;
@@ -88,13 +91,12 @@ aside {
     padding-left: 7px;
 }
 .grid__column_10 {
-    width: 74%;
-    float: right;
+    width: 70%;
     padding-top: 0;
     margin-right: 5px;
+    display: inline-block;
 }
 .hmenu  {
-    float: left;
     border: 1px;
     margin: 20px 50px 5px 50px;
     padding: 10px 0 10px 10px ;
@@ -104,8 +106,7 @@ aside {
     height: 50px;
     background-color: rgb(185, 190, 194);
     display: flex;
-    width: 90.55%  ;
-    box-sizing: border-box;
+    width: 90.55%;
 }
 .hmenu select   {
     width: 100%;
@@ -182,22 +183,25 @@ ul.hmenu    {
     color: #ccc;
 }
 .content    {
-    width: fit-content;
-    margin-top: 85px;
+    margin-top: 25px;
     margin-left: 50px;
     display: flex;
-    box-sizing: border-box;
+    width: 90.55%;
+    max-height: 60%;
+    flex-wrap: wrap;
+    
 }
 .grid__column_4 {
-    padding: 0 12px;
-    width: 30%;
+    padding-right: 21px;
+    width: 31%;
+
 }
 .product_item    {
+    display: flex;
     background-color: var(--primary-color);
+    width: fit-content;
 }
-.grid__column_4:first-child   {
-    padding-left: 0;
-}
+
 .product_item_name   {
     font-size: 15px;
     font-weight: 400;
@@ -217,12 +221,14 @@ ul.hmenu    {
     color: white;
     display: flex;
     align-items: baseline;
+    flex-wrap: wrap;
 }
 .product_item_price_old  {
     padding: 0;
     color: #9079a6;
     text-decoration: line-through;
     font-size: 13.5px;
+    box-sizing: content-box;
 }
 .product_item_price_new  {
     padding: 0 10px;
@@ -233,22 +239,21 @@ ul.hmenu    {
     padding: 0 10px;
     display: flex;
     color: white;
+    justify-content: space-between;
 
 }
 .product_action_like    {
-    float: left;
 
 }
 .product_action_rating  {
-    float: right;
+    color: #fece40;
 
 }
-.product_action_rating .full-star   {
-    color: #fece40;
-}
+
 .product_origin {
     padding: 0 10px;
     color: #9079a6;
+    justify-content: space-between;
 }
 .product_origin_brand   {
     float: left;
@@ -258,9 +263,8 @@ ul.hmenu    {
     float: right;
 
 }
-.product_favourite  {
+.product_saleoff    {
     color: white;
-    
 }
 .product_saleoff_percent    {
 
